fix sidebar overflow

--- a/src/app/shared/components/sidebarnav/sidebarnav.component.scss
+++ b/src/app/shared/components/sidebarnav/sidebarnav.component.scss
@@ -36,6 +36,7 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: auto;
 
   .sidenav-nav-item {
     width: 100%;
